# wearture

./: .env  config.py  coupon_usage.json  create_reviews_table.sql  fix_coupon_redemptions.sql  hello.py  index.html  main.py  oAuthFix.py  pyproject.toml  requirements.txt  script.js  styles.css
.github/: ping.yml
.github/workflows/: ping.yml
admin/: auth.py  categories.py  dependencies.py  products.py  routes.py  user_auth.py
auth/: oauth_handler.py
db/: email_service.py  order_management.py  razorpay_client.py  shiprocketManagement.py  shiprocket_client.py  supabase_client.py  test.py
static/admin/css/: admin.css
static/admin/js/: admin.js
static/css/: profile-view.css  styles.css
static/images/: kurtaMenCat.avif  menPoloCat.avif  rzp.csv
static/js/: product-hover.js  profile-navigation.js  profile-view.js  script.js
templates/: category.html  checkout.html  collections.html  index.html  login.html  navIcon.txt  order_detail.html  orders.html  product_detail.html  products.html  profile.html  register.html  return.html  wishlist.html
templates/admin/: categories.html  customers.html  dashboard.html  login.html  orders.html  products.html  reels.html  support.html
templates/legal/: contact.html  privacyPolicy.html  returnPolicy.html  shippingPolicy.html  terms.html
