[project]
name = "ecomweb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "jinja2>=3.1.6",
    "pydantic[email]>=2.11.4",
    "python-dotenv>=1.1.0",
    "python-jose>=3.4.0",
    "python-multipart>=0.0.20",
    "razorpay>=1.4.2",
    "setuptools>=80.4.0",
    "supabase>=2.15.1",
    "uvicorn>=0.34.2",
]
